{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 56,
  "lineage": "f99474db-ea63-1640-1a26-35b567fe7d3d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:330130877977:loadbalancer/terraform-demo-elb",
            "availability_zones": [
              "us-west-1b",
              "us-west-1c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "terraform-demo-elb-1590450299.us-west-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terraform-demo-elb",
            "idle_timeout": 400,
            "instances": [
              "i-0eacfee42235eb42f",
              "i-0f4d2569f6bb6debf"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "terraform-demo-elb",
            "security_groups": [
              "sg-00f1664cb33623c43",
              "sg-0b9fe7f182dda8db8",
              "sg-0bd21c3c56a6ccbd1",
              "sg-0f26d85bbe24ca888"
            ],
            "source_security_group": "330130877977/Allow_All_Out_IPV4",
            "source_security_group_id": "sg-0f26d85bbe24ca888",
            "subnets": [
              "subnet-0212a81275c883d4a",
              "subnet-0a517763fad23c0c4"
            ],
            "tags": {
              "app": "NGINX",
              "env": "dev"
            },
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "depends_on": [
            "aws_instance.webservers",
            "aws_security_group.allow_all_out_ipv4",
            "aws_security_group.allow_http",
            "aws_security_group.allow_https",
            "aws_security_group.ensure_ssh_ipv4",
            "aws_subnet.subnet_a",
            "aws_subnet.subnet_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webservers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-068670db424b01e9a",
            "arn": "arn:aws:ec2:us-west-1:330130877977:instance/i-0f4d2569f6bb6debf",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0f4d2569f6bb6debf",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_instance_key_12015",
            "monitoring": false,
            "primary_network_interface_id": "eni-08ee7f8f38e707009",
            "private_dns": "ip-10-0-0-214.us-west-1.compute.internal",
            "private_ip": "10.0.0.214",
            "public_dns": "ec2-52-53-153-52.us-west-1.compute.amazonaws.com",
            "public_ip": "52.53.153.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-007983bc53b022c9d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0212a81275c883d4a",
            "tags": {
              "app": "NGINX",
              "env": "dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00f1664cb33623c43",
              "sg-0b9fe7f182dda8db8",
              "sg-0bd21c3c56a6ccbd1",
              "sg-0f26d85bbe24ca888"
            ]
          },
          "depends_on": [
            "aws_key_pair.edgenda_key",
            "aws_security_group.allow_all_out_ipv4",
            "aws_security_group.allow_http",
            "aws_security_group.allow_https",
            "aws_security_group.ensure_ssh_ipv4",
            "aws_subnet.subnet_a",
            "aws_subnet.subnet_b",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-068670db424b01e9a",
            "arn": "arn:aws:ec2:us-west-1:330130877977:instance/i-0eacfee42235eb42f",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0eacfee42235eb42f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_instance_key_12015",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a37eff5224f553e1",
            "private_dns": "ip-10-0-1-157.us-west-1.compute.internal",
            "private_ip": "10.0.1.157",
            "public_dns": "ec2-54-183-137-90.us-west-1.compute.amazonaws.com",
            "public_ip": "54.183.137.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-08225642d4f726a34",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a517763fad23c0c4",
            "tags": {
              "app": "NGINX",
              "env": "dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00f1664cb33623c43",
              "sg-0b9fe7f182dda8db8",
              "sg-0bd21c3c56a6ccbd1",
              "sg-0f26d85bbe24ca888"
            ]
          },
          "depends_on": [
            "aws_key_pair.edgenda_key",
            "aws_security_group.allow_all_out_ipv4",
            "aws_security_group.allow_http",
            "aws_security_group.allow_https",
            "aws_security_group.ensure_ssh_ipv4",
            "aws_subnet.subnet_a",
            "aws_subnet.subnet_b",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0cdf2f637a6305e47",
            "owner_id": "330130877977",
            "vpc_id": "vpc-0e8020ee6b21db0cd"
          },
          "depends_on": [
            "aws_vpc.tf_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05794351444f39330",
            "owner_id": "330130877977",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cdf2f637a6305e47",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0e8020ee6b21db0cd"
          },
          "depends_on": [
            "aws_internet_gateway.gateway",
            "aws_vpc.tf_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_assoc_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d044c8eecb65b13",
            "route_table_id": "rtb-05794351444f39330",
            "subnet_id": "subnet-0212a81275c883d4a"
          },
          "depends_on": [
            "aws_route_table.public_rt",
            "aws_subnet.subnet_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_assoc_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09893ca1e927f8e2c",
            "route_table_id": "rtb-05794351444f39330",
            "subnet_id": "subnet-0a517763fad23c0c4"
          },
          "depends_on": [
            "aws_route_table.public_rt",
            "aws_subnet.subnet_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all_out_ipv4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:330130877977:security-group/sg-0f26d85bbe24ca888",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f26d85bbe24ca888",
            "ingress": [],
            "name": "Allow_All_Out_IPV4",
            "name_prefix": null,
            "owner_id": "330130877977",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e8020ee6b21db0cd"
          },
          "depends_on": [
            "aws_vpc.tf_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:330130877977:security-group/sg-00f1664cb33623c43",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00f1664cb33623c43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": null,
            "owner_id": "330130877977",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e8020ee6b21db0cd"
          },
          "depends_on": [
            "aws_vpc.tf_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:330130877977:security-group/sg-0b9fe7f182dda8db8",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b9fe7f182dda8db8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_https",
            "name_prefix": null,
            "owner_id": "330130877977",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e8020ee6b21db0cd"
          },
          "depends_on": [
            "aws_vpc.tf_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ensure_ssh_ipv4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:330130877977:security-group/sg-0bd21c3c56a6ccbd1",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0bd21c3c56a6ccbd1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Ensure_SSH_Allow_All_IPV4",
            "name_prefix": null,
            "owner_id": "330130877977",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e8020ee6b21db0cd"
          },
          "depends_on": [
            "aws_vpc.tf_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:330130877977:subnet/subnet-0212a81275c883d4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0212a81275c883d4a",
            "map_public_ip_on_launch": true,
            "owner_id": "330130877977",
            "vpc_id": "vpc-0e8020ee6b21db0cd"
          },
          "depends_on": [
            "aws_internet_gateway.gateway",
            "aws_vpc.tf_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:330130877977:subnet/subnet-0a517763fad23c0c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a517763fad23c0c4",
            "map_public_ip_on_launch": true,
            "owner_id": "330130877977",
            "vpc_id": "vpc-0e8020ee6b21db0cd"
          },
          "depends_on": [
            "aws_internet_gateway.gateway",
            "aws_vpc.tf_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_network",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:330130877977:vpc/vpc-0e8020ee6b21db0cd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06e59c798d3254ef3",
            "default_route_table_id": "rtb-0a2ab8a21213d86e7",
            "default_security_group_id": "sg-061ee3aae09e555b5",
            "dhcp_options_id": "dopt-1d54097a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e8020ee6b21db0cd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a2ab8a21213d86e7",
            "owner_id": "330130877977"
          }
        }
      ]
    }
  ]
}